Got editor and preview to work in sync; able to render markdown as html in the previewer

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.6.1/marked.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.6.1/marked.min.js"></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.6.1/marked.min.js.map"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -37,6 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.6.1/marked.js"></script>
+
   </body>
 </html>
